# lingpy

./: .gitignore  .travis.yml  .zenodo.json  CONTRIBUTING.md  CONVENTIONS.md  MANIFEST.in  PAPERS.md  README.md  README.rst  RELEASING.md  cleanstuff.py  manifest_build.in  manifest_dist.in  pip-requirements  requirements.txt  setup.cfg  setup.py  three2two.py  tox.ini
.github/workflows/: python-package.yml
data/: GER.csv  IDS.csv  PIE.csv
data/orthography_profiles/: asjp_orthography_profile.prf  burtch1983.prf  daniels2010_aisi.prf  daniels2010_mum.prf  daniels2010_nend.prf  daniels2010_sirva.prf  huber1992.rules  leach1969.rules  martha_apali.prf  pad_orthography_profile.txt  test.rules  thiesen1998.prf  zgraggen1980.prf  zgraggen1980_daniels2.prf
devtools/: README.md  hp_lexstat.csv  spreadsheet.tsv
devtools/alignments/: Witotoan.csv  alignments.py  alignments_test.qlc  testqlc.py  wordlisttest.qlc
devtools/data/: german.txt  harry_potter_alignments.csv  hp_lexstat.csv
devtools/evolaemp/: evolaemp_test.py  evolaemp_test_modified.py  evolaemp_test_modified2.py
devtools/unittest/: test_lingpy.py
doc/: Makefile  README.md  make.bat
doc/source/: .conf.py.swp  .index.rst.swp  change_docs.py  conf.py  download.rst  examples.rst  index.rst  intro.rst  news.rst  reference.rst
lib/python3.4/: config-3.4m  plat-linux
lingpy/: README.md  __init__.py  __main__.py  _settings.py  basictypes.py  cache.py  cli.py  compat.py  config.py  log.py  plugins  settings.py  util.py
lingpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lingpy/_algorithms/: __init__.py  align.cpp  cluster.py
lingpy/algorithm/: .classes.py.swp  .misc.py.swp  __init__.py  _align.py  _alignx.py  _calign.py  _calignx.py  _compileCPP.py  _compilePYX.py  _malign.py  _talign.py  _tree.py  align.c  align.cpp  align.pyx  alignx (Kopie).pyx  alignx.c  alignx.pyx  calign.c  calign.pyx  calignx.c  calignx.pyx  classes.py  cluster.py  cluster_util.py  clustering.py  distance.py  extra.py  malign.c  malign.pyx  misc.py  talign.c  (+1 more)
lingpyxxx/: _settings.py  settings.py
scripts/: README.md  mpa.py  wordlist_demo.py
test/: lingpy-2013-04-01.csv  lingpy-2013-04-02.csv  matrix.dst  test_ngram.py  test_sca.py
tests/: conftest.py  test_basictypes.py  test_cache.py  test_cli.py  test_config.py  test_log.py  test_misc.py  test_settings.py  test_util.py
(+863 files in other folders)
